# xofo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  dialog.py  imgui.ini  install_mango.sh
.cache/clangd/index/: accessor.hpp.025C6451B001AC17.idx  bits.hpp.5A949609EF2D6095.idx  buffer.cpp.7901F1F1F6F8B114.idx  buffer.h.26B06B7800A50E7D.idx  camera.h.F84BB19C728C5B98.idx  common.hpp.EA1ED5D0AD33621B.idx  common_gather.hpp.AD37E646028FBF88.idx  common_mask.hpp.9A4B7B2C2194B753.idx  composite_double256.hpp.73E3AD9E3516E6EA.idx  composite_double512.hpp.809EBA987DB5113D.idx  composite_float256.hpp.B564DB5DEC13C84F.idx  composite_float512.hpp.4B9B889287729249.idx  composite_int256.hpp.56649615ED2D3F79.idx  composite_int512.hpp.6C4F61849B0E67D8.idx  configure.hpp.13C0898CCC82F243.idx  half.hpp.BC8F88A1DB35518C.idx  image.cpp.C0518C9F9F9C8672.idx  image.h.27E2D097EA9DADA6.idx  main.cpp.2650855077258440.idx  matrix.hpp.56442B039BA843B8.idx  (+62 more)
.ccls-cache/@@home@atil@xofo/: @usr@include@c++@10@array.blob  @usr@include@c++@10@backward@auto_ptr.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocated_ptr.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@atomic_base.h.blob  @usr@include@c++@10@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@erase_if.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  @usr@include@c++@10@bits@functexcept.h.blob  @usr@include@c++@10@bits@functional_hash.h.blob  @usr@include@c++@10@bits@hash_bytes.h.blob  @usr@include@c++@10@bits@hashtable.h.blob  @usr@include@c++@10@bits@hashtable_policy.h.blob  @usr@include@c++@10@bits@invoke.h.blob  @usr@include@c++@10@bits@iterator_concepts.h.blob  @usr@include@c++@10@bits@memoryfwd.h.blob  @usr@include@c++@10@bits@move.h.blob  @usr@include@c++@10@bits@nested_exception.h.blob  @usr@include@c++@10@bits@postypes.h.blob  @usr@include@c++@10@bits@predefined_ops.h.blob  @usr@include@c++@10@bits@ptr_traits.h.blob  @usr@include@c++@10@bits@range_access.h.blob  @usr@include@c++@10@bits@range_cmp.h.blob  @usr@include@c++@10@bits@ranges_uninitialized.h.blob  @usr@include@c++@10@bits@refwrap.h.blob  @usr@include@c++@10@bits@shared_ptr.h.blob  @usr@include@c++@10@bits@shared_ptr_atomic.h.blob  @usr@include@c++@10@bits@shared_ptr_base.h.blob  @usr@include@c++@10@bits@stl_algobase.h.blob  @usr@include@c++@10@bits@stl_construct.h.blob  @usr@include@c++@10@bits@stl_function.h.blob  @usr@include@c++@10@bits@stl_iterator.h.blob  @usr@include@c++@10@bits@stl_iterator_base_funcs.h.blob  (+97 more)
.ccls-cache/@home@atil@xofo/: src@buffer.cpp  src@buffer.cpp.blob  src@image.cpp.blob  src@main.cpp  src@main.cpp.blob
cmake/: Findmango.cmake  findmango.cmake
include/: buffer.h  camera.h  core.h  cube_map.h  entity.h  image.h  maps.h  mesh.h  mesh_loader.h  model.h  pipeline.h  shape.h  swizz.h  texture.h  typedefs.h  util.h  vk.h  vk_mem_alloc.h  window.h  xofo.h
lib/: spirv_reflect.c
shaders/: grid.frag  grid.vert  scene.frag  scene.vert  shader.frag  shader.frag.spv.reflect  shader.vert  skybox.frag  skybox.vert
src/: buffer.cpp  cam.cpp  enums.t  image.cpp  main.cpp  maps.cpp  mesh_loader.cpp  pipeline.cpp  spirv.py  spirv.t  stb.cpp  texture.cpp  util.cpp  vk.cpp  vma.cpp  window.cpp  xofo.cpp
